[gd_scene load_steps=6 format=3 uid="uid://c2wd17pucak4y"]

[ext_resource type="Theme" uid="uid://d2vfdeuycvrrh" path="res://themes/container_theme.tres" id="1_0lupm"]
[ext_resource type="Script" path="res://button_container.gd" id="2_c1ggv"]
[ext_resource type="FontFile" uid="uid://6pl6qtoo2p2x" path="res://fonts/Xolonium-Regular.ttf" id="2_nhywa"]

[sub_resource type="InputEventKey" id="InputEventKey_3q6ti"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_x1tp5"]
events = [SubResource("InputEventKey_3q6ti")]

[node name="ButtonContainer" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = 20.0
offset_right = 134.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0lupm")
script = ExtResource("2_c1ggv")

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nhywa")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_x1tp5")
text = "Start
"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nhywa")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nhywa")
theme_override_font_sizes/font_size = 64
text = "Exit
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
